# zenn_digest

./: LICENSE  README.md  config.toml  main.py  pyproject.toml
.github/workflows/: main.yml
libs/: __init__.py  qiita_feed.py  types.py  zenn_feed.py
tech_feeds_digest/: __init__.py  discord.py  qiita_feed.py  scraper.py  summarizer.py  types.py  zenn_feed.py
tests/: test_init.py  test_qiita_feed.py  test_scraper.py  test_zenn_feed.py
