[project]
name = "zenn-digest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "bs4>=0.0.2",
    "discord-py>=2.5.2",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "langchain>=0.3.24",
    "langchain-openai>=0.3.14",
    "lxml>=5.4.0",
    "polars>=1.28.1",
    "pydantic>=2.11.3",
    "python-frontmatter>=1.1.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
    "tzdata>=2025.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
    "types-pytz>=2025.2.0.20250326",
]


[tool.ruff]
line-length = 128

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
    "B904", # raise ... from ... になっていない場合のエラーを無視
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
